[gd_scene load_steps=7 format=3 uid="uid://j6u5ftoc6wn1"]

[ext_resource type="Script" path="res://Scripts/root.gd" id="1_irsp1"]
[ext_resource type="Script" path="res://Scripts/CameraControls.gd" id="2_4m3mj"]
[ext_resource type="Material" uid="uid://wqwccqgedhs8" path="res://materials/background.tres" id="3_3j1kv"]
[ext_resource type="Texture2D" uid="uid://8bdifqgn8fy5" path="res://resources/menuIcon.png" id="3_cast4"]
[ext_resource type="Script" path="res://Scripts/MenuButton.gd" id="4_086k4"]
[ext_resource type="Script" path="res://Scripts/PostgreSQL.gd" id="6_5mg4s"]

[node name="Root" type="Node3D"]
script = ExtResource("1_irsp1")

[node name="MapView" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="MapView"]
transform = Transform3D(-1, -5.61943e-08, 6.69697e-08, 0, 0.766044, 0.642788, -8.74228e-08, 0.642788, -0.766044, 0, 21, -36)
current = true
fov = 40.0
size = 50.0
script = ExtResource("2_4m3mj")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="MapView"]
transform = Transform3D(1, 0, 0, 0, -0.34202, 0.939693, 0, -0.939693, -0.34202, 0, 21, -36)

[node name="Background" type="CSGBox3D" parent="MapView"]
transform = Transform3D(1000, 0, 0, 0, 1, 0, 0, 0, 1000, 0, -39.22, 0)
material = ExtResource("3_3j1kv")

[node name="GraphView" type="Node2D" parent="."]

[node name="ListView" type="Node2D" parent="."]

[node name="Navigation" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MenuButton" type="MenuButton" parent="Navigation"]
layout_mode = 0
offset_left = 18.0
offset_top = 16.0
offset_right = 102.0
offset_bottom = 108.0
toggle_mode = false
icon = ExtResource("3_cast4")
expand_icon = true
switch_on_hover = true
script = ExtResource("4_086k4")

[node name="PostgreSQL" type="Node" parent="."]
script = ExtResource("6_5mg4s")

[node name="TEMPBUILDINGS" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.65, 0, -12.17)

[node name="Building1" type="Node3D" parent="TEMPBUILDINGS"]

[node name="CSGBox3D" type="CSGBox3D" parent="TEMPBUILDINGS/Building1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.424, 0, 0)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D2" type="CSGBox3D" parent="TEMPBUILDINGS/Building1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.584, 0, 0.67)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D3" type="CSGBox3D" parent="TEMPBUILDINGS/Building1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.669, 0, 0.66)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D4" type="CSGBox3D" parent="TEMPBUILDINGS/Building1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.904, 0, 1.715)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D5" type="CSGBox3D" parent="TEMPBUILDINGS/Building1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.136, 0, 1.945)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D6" type="CSGBox3D" parent="TEMPBUILDINGS/Building1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.301, 0, 1.225)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D7" type="CSGBox3D" parent="TEMPBUILDINGS/Building1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.441, 0, 1.25)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D8" type="CSGBox3D" parent="TEMPBUILDINGS/Building1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.486, 0, 1.095)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D9" type="CSGBox3D" parent="TEMPBUILDINGS/Building1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.316, 0, 1.275)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D10" type="CSGBox3D" parent="TEMPBUILDINGS/Building1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.471, 0, 0.59)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D11" type="CSGBox3D" parent="TEMPBUILDINGS/Building1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.126, 0, 0.33)
size = Vector3(0.03, 0.03, 0.03)

[node name="Building2" type="Node3D" parent="TEMPBUILDINGS"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.74, 0, 1.57)

[node name="CSGBox3D" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.424, 0, 0)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D2" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.641, 0, 0.805)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D3" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.291, 0, -0.015)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D4" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.821, 0, 0.39)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D5" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.661, 0, 0.6)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D6" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.806, 0, 0.72)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D7" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.121, 0, 1.6)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D8" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.876, 0, 1.415)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D9" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.606, 0, 1.755)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D10" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.286, 0, 1.52)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D11" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.331, 0, 1.465)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D12" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.004, 0, 0.415)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D13" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.804, 0, 0.165)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D14" type="CSGBox3D" parent="TEMPBUILDINGS/Building2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.654, 0, 0.275)
size = Vector3(0.03, 0.03, 0.03)

[node name="Building3" type="Node3D" parent="TEMPBUILDINGS"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.04, 0, 3.815)

[node name="CSGBox3D" type="CSGBox3D" parent="TEMPBUILDINGS/Building3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.056, 0, 0.225)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D2" type="CSGBox3D" parent="TEMPBUILDINGS/Building3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.666, 0, 0.695)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D3" type="CSGBox3D" parent="TEMPBUILDINGS/Building3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.051, 0, 0.205)
size = Vector3(0.03, 0.03, 0.03)

[node name="CSGBox3D4" type="CSGBox3D" parent="TEMPBUILDINGS/Building3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.426, 0, -0.255)
size = Vector3(0.03, 0.03, 0.03)
